// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FastPassReportSummary renders per the snapshot 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      [
        "fail",
        "incomplete",
        "pass",
      ]
    }
    outcomeStats={
      {
        "fail": 3,
        "incomplete": 0,
        "pass": 1,
      }
    }
  />
</div>
`;

exports[`FastPassReportSummary renders when automated checks are null 1`] = `
<div
  className="summary-section"
>
  <h2>
    Summary
  </h2>
  <OutcomeSummaryBar
    allOutcomeTypes={
      [
        "fail",
        "incomplete",
        "pass",
      ]
    }
    outcomeStats={
      {
        "fail": 2,
        "incomplete": 0,
        "pass": 1,
      }
    }
  />
</div>
`;
